# Graduation-Project

Lib-test/ADC/: ADC.pdsprj.DESKTOP-6E4BOER.abdal.workspace  CMakeLists.txt  Last Loaded ADC.pdsbak  sss
Lib-test/ADC/libs/: CMakeLists.txt  rf24.c
Lib-test/ADC/libs/include/: internet.h  wait.h
Lib-test/Embedded-shs/: CMakeLists.txt  development-guidelines.md  past  ref.cpp
Lib-test/Embedded-shs/app/src/: main  main.c
Lib-test/Embedded-shs/libs/: CMakeLists.txt  rf24.c  transport.c
Lib-test/Embedded-shs/libs/include/: Serial.h
Lib-test/SPI/: Backup Of spi1824.pdsbak  CMakeLists.txt  Last Loaded spi1824.pdsbak  spi1824.pdsprj.DESKTOP-6E4BOER.abdal.workspace
Lib-test/SPI/libs/: CMakeLists.txt  spi_master.c  test.c
Lib-test/SPI/libs/include/: OXPacket.h  rf24_internals.h
Lib-test/Timer16f1828/: Backup Of New Project.pdsbak  CMakeLists.txt  Last Loaded New Project.pdsbak  New Project.pdsprj.DESKTOP-6E4BOER.abdal.workspace
Lib-test/Timer16f1828/app/src/: main.c
Lib-test/Timer16f1828/libs/: CMakeLISTS.txt  time.c  wait.c
Lib-test/Timer16f1828/libs/include/: time.h  timer.h  wait.h
Lib-test/nRF1828/: spi1824.pdsprj.DESKTOP-6E4BOER.abdal.workspace
Lib-test/nRF1828/app/: CMakeLists.txt
Lib-test/nRF1828/app/src/: main.c
Lib-test/nRF1828/libs/: CMakeLists.txt  buffers.c  rf24.c
Lib-test/nRF1828/libs/include/: Serial.h  dhcp.h  nRF24l01.h
Lib-test/rf24/app/src/: main.c
Lib-test/rf24/libs/: CMakeLists.txt  internet.c  timer.c  uart.c
Lib-test/rf24pic18f1828/: CMakeLists.txt
Lib-test/rf24pic18f1828/app/: CMakeLists.txt
Lib-test/rf24pic18f1828/app/src/: main.c
Lib-test/rf24pic18f1828/libs/: CMakeLists.txt  rf24.c
Lib-test/timer/: CMakeLists.txt  Last Loaded wait.DBK  wait.PWI
Lib-test/timer/libs/: internet.c  rf24.c  transport.c
Libs/: rf24.c  rf24.h  spi_master.c  spi_master.h  time.c
Moduls/: udp.test.rar
Moduls/CriticalSensor/Simulation/: design.DSN  design.PWI
Moduls/DOOR16f1828/: CMakeLists.txt
Moduls/DOOR16f1828/app/src/: ledtest  main.c
Moduls/DOOR16f1828/libs/: internet.c  logline.c  rf24.c  spi_master.c
Moduls/DOOR16f1828/libs/include/: bitwise.h  config.h  oxp.h  transport.h
Moduls/Door/: CMakeLists.txt  Last Loaded door.DBK  door.DSN  door.PWI
Moduls/Door/libs/: internet.c  spi_master.c  time.c
Moduls/GAS&Flame16f1828/libs/: CMakeLists.txt  OXPacket.c
Moduls/SOIL16f1828/: CMakeLists.txt
Moduls/SOIL16f1828/libs/: CMakeLists.txt  Node.c  rf24.c  timer.c  transport.c
Moduls/Switch/: CMakeLists.txt  design.DSN
Moduls/Switch/app/src/: main.c
Moduls/Switch/libs/: Serial.c  rf24.c  time.c
Moduls/Switch/libs/include/: config.h  rf24.h  util.h
Moduls/Switch16f1828/libs/: CMakeLists.txt  Serial.c  internet.c  spi_master.c
libs/: ADC  ADC.c  CMakeLists.txt  spi_master
libs/include/: ADC.h  Node.h  config.h  rf24.h  wait.h
(+29 files in other folders)
